<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/splash_screen_color"
    android:id="@+id/dashboardBody"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="20dp"
    tools:context=".UtilityDashboardActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/dashboard_title"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.helper.widget.Flow
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        app:constraint_referenced_ids="card1, card2, card3, card4"
        app:flow_horizontalGap="10dp"
        app:flow_maxElementsWrap="2"
        app:flow_verticalGap="10dp"
        app:flow_wrapMode="aligned"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:cardBackgroundColor="@color/card_color"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true" >

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="10dp" >

            <ImageView
                android:contentDescription="@string/icon_company"
                android:layout_height="100dp"
                android:layout_width="100dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/icon_company_product" />

            <TextView
                android:layout_height="40dp"
                android:layout_width="125dp"
                android:text="@string/card1_title"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_marginTop="0dp"
                android:text="@string/card1_subtext"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/card_color"
        app:cardCornerRadius="10sp"
        app:cardUseCompatPadding="true"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="10dp" >

            <ImageView
                android:contentDescription="@string/icon_electric"
                android:layout_height="100dp"
                android:layout_width="100dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/icon_electric"/>

            <TextView
                android:layout_width="125dp"
                android:layout_height="30dp"
                android:text="@string/card2_title"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/card2_subtext"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card3"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:cardBackgroundColor="@color/card_color"
        app:cardCornerRadius="10sp"
        app:cardUseCompatPadding="true"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="10dp" >

            <ImageView
                android:contentDescription="@string/icon_solar"
                android:layout_height="100dp"
                android:layout_width="100dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/icon_solar_power"/>

            <TextView
                android:layout_height="30dp"
                android:layout_width="125dp"
                android:text="@string/card3_title"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/card3_subtext"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/card_color"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="10dp" >

            <ImageView
                android:contentDescription="@string/icon_transportation"
                android:layout_height="100dp"
                android:layout_width="100dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/icon_electric_car"/>

            <TextView
                android:layout_height="20dp"
                android:layout_width="125dp"
                android:text="@string/card4_title"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_height="40dp"
                android:layout_width="match_parent"
                android:text="@string/card4_subtext"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:background="@drawable/bottom_navigation_shape"
        android:elevation="10dp"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        app:itemIconSize="25dp"
        app:itemIconTint="@drawable/bottom_navigation_item"
        app:itemRippleColor="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/menu_items"
        app:labelVisibilityMode="unlabeled" />

</androidx.constraintlayout.widget.ConstraintLayout>