<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/splash_screen_color"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".UtilityRequestRateActivity">

    <TextView
        android:id="@+id/tvRequest"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/utility_rate_title"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etStreetAddressForRate"
        android:background="@drawable/bg_input_shape"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_baseline_add_location_24"
        android:ems="10"
        android:hint="@string/hint_street_address"
        android:importantForAutofill="no"
        android:inputType="textPostalAddress"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"
        android:paddingBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRequest" />

    <EditText
        android:id="@+id/etCityForRate"
        android:background="@drawable/bg_input_shape"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_baseline_location_city_24"
        android:ems="10"
        android:hint="@string/hint_city"
        android:importantForAutofill="no"
        android:inputType="text"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_marginTop="25dp"
        android:textColor="@color/white"
        android:paddingBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="15dp"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/etStreetAddressForRate"
        app:layout_constraintStart_toStartOf="@+id/etStreetAddressForRate"
        app:layout_constraintTop_toBottomOf="@id/etStreetAddressForRate" />

    <EditText
        android:id="@+id/etStateForRate"
        android:background="@drawable/bg_input_shape"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_baseline_landscape_24"
        android:ems="10"
        android:hint="@string/hint_state"
        android:importantForAutofill="no"
        android:inputType="textShortMessage"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_marginTop="25dp"
        android:paddingBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/etCityForRate"
        app:layout_constraintStart_toStartOf="@+id/etCityForRate"
        app:layout_constraintTop_toBottomOf="@id/etCityForRate" />

    <Button
        android:id="@+id/btnSubmitRateRequest"
        android:background="@drawable/bg_input_shape"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_marginTop="25dp"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:text="@string/submit_request"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/etStateForRate"
        app:layout_constraintStart_toStartOf="@+id/etStateForRate"
        app:layout_constraintTop_toBottomOf="@+id/etStateForRate" />

    <Button
        android:id="@+id/btnClearRateRequest"
        android:background="@drawable/bg_input_shape"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="25dp"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:text="@string/clear"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSubmitRateRequest" />

    <TextView
        android:id="@+id/tvCommercial"
        android:background="@drawable/bg_input_shape"
        android:gravity="center_vertical"
        android:layout_height="40dp"
        android:layout_width="0dp"
        android:layout_marginTop="25dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/commercial"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvIndustrial"
        app:layout_constraintEnd_toEndOf="@id/btnSubmitRateRequest"
        app:layout_constraintStart_toStartOf="@id/btnSubmitRateRequest"
        app:layout_constraintTop_toBottomOf="@+id/btnClearRateRequest" />

    <TextView
        android:id="@+id/tvIndustrial"
        android:background="@drawable/bg_input_shape"
        android:gravity="center_vertical"
        android:layout_height="40dp"
        android:layout_width="0dp"
        android:layout_marginTop="25dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/industrial"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/tvCommercial"
        app:layout_constraintStart_toStartOf="@id/tvCommercial"
        app:layout_constraintTop_toBottomOf="@+id/tvCommercial" />

    <TextView
        android:id="@+id/tvResidential"
        android:background="@drawable/bg_input_shape"
        android:gravity="center_vertical"
        android:layout_height="40dp"
        android:layout_width="0dp"
        android:layout_marginTop="25dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:text="@string/residential"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/tvIndustrial"
        app:layout_constraintStart_toStartOf="@id/tvIndustrial"
        app:layout_constraintTop_toBottomOf="@+id/tvIndustrial" />

</androidx.constraintlayout.widget.ConstraintLayout>