<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/splash_screen_color"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".LoginActivity" >

    <ScrollView
        android:fillViewport="true"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        app:layout_editor_absoluteX="147dp"
        app:layout_editor_absoluteY="-50dp" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <TextView
                android:id="@+id/tvLogin"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="50sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etEmail"
                android:background="@drawable/bg_input_shape"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/hint_email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_marginEnd="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="25dp"
                android:paddingBottom="15dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLogin" />

            <EditText
                android:id="@+id/etPassword"
                android:background="@drawable/bg_input_shape"
                android:drawableStart="@drawable/ic_baseline_security_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/hint_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_marginTop="25dp"
                android:paddingBottom="15dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/etEmail"
                app:layout_constraintStart_toStartOf="@+id/etEmail"
                app:layout_constraintTop_toBottomOf="@id/etEmail" />

            <Button
                android:id="@+id/btnClearLogin"
                android:background="@drawable/bg_input_shape"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/clear"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/etPassword"
                app:layout_constraintTop_toBottomOf="@+id/etPassword" />

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginBottom="25dp"
                android:layout_marginTop="25dp"
                android:text="@string/forgot_password"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/btnLogin"
                app:layout_constraintEnd_toEndOf="@+id/etPassword"
                app:layout_constraintTop_toBottomOf="@+id/etPassword" />

            <Button
                android:id="@+id/btnLogin"
                android:background="@drawable/bg_input_shape"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_marginTop="25dp"
                android:text="@string/login"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/tvForgotPassword"
                app:layout_constraintStart_toStartOf="@+id/btnClearLogin"
                app:layout_constraintTop_toBottomOf="@+id/btnClearLogin" />

            <TextView
                android:id="@+id/tvCreateNewAccount"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/create_new_account"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/btnLogin"
                app:layout_constraintStart_toStartOf="@+id/btnLogin"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

            <TextView
                android:id="@+id/tvOr"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="25dp"
                android:text="@string/or"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/btnPhone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCreateNewAccount" />

            <View
                android:id="@+id/v1"
                android:background="@color/white"
                android:layout_height="10dp"
                android:layout_width="0dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/tvOr"
                app:layout_constraintEnd_toStartOf="@+id/tvOr"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/btnLogin"
                app:layout_constraintTop_toTopOf="@+id/tvOr" />

            <View
                android:id="@+id/v2"
                android:background="@color/white"
                android:layout_height="10dp"
                android:layout_width="0dp"
                android:layout_marginStart="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/tvOr"
                app:layout_constraintEnd_toEndOf="@+id/btnLogin"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/tvOr"
                app:layout_constraintTop_toTopOf="@+id/tvOr" />

            <ImageView
                android:id="@+id/btnGoogle"
                android:contentDescription="@string/google_description"
                android:layout_height="50dp"
                android:layout_width="50dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/logo_google"
                app:layout_constraintBottom_toBottomOf="@+id/btnPhone"
                app:layout_constraintEnd_toStartOf="@+id/btnFacebook"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btnPhone" />

            <ImageView
                android:id="@+id/btnFacebook"
                android:contentDescription="@string/facebook_description"
                android:layout_height="50dp"
                android:layout_width="50dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/logo_facebook"
                app:layout_constraintBottom_toBottomOf="@+id/btnPhone"
                app:layout_constraintEnd_toStartOf="@+id/btnPhone"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnGoogle"
                app:layout_constraintTop_toTopOf="@+id/btnPhone" />

            <ImageView
                android:id="@+id/btnPhone"
                android:contentDescription="@string/phone_description"
                android:layout_height="50dp"
                android:layout_width="50dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                android:src="@drawable/logo_phone"
                app:layout_constraintEnd_toStartOf="@+id/btnTwitter"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnFacebook"
                app:layout_constraintTop_toBottomOf="@+id/tvOr" />

            <ImageView
                android:id="@+id/btnTwitter"
                android:contentDescription="@string/twitter_description"
                android:layout_height="50dp"
                android:layout_width="50dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/logo_twitter"
                app:layout_constraintBottom_toBottomOf="@+id/btnPhone"
                app:layout_constraintEnd_toStartOf="@+id/btnGithub"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnPhone"
                app:layout_constraintTop_toTopOf="@+id/btnPhone" />

            <ImageView
                android:id="@+id/btnGithub"
                android:contentDescription="@string/github_description"
                android:layout_height="50dp"
                android:layout_width="50dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/logo_github"
                app:layout_constraintBottom_toBottomOf="@+id/btnPhone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnTwitter"
                app:layout_constraintTop_toTopOf="@+id/btnPhone" />

            <ProgressBar
                android:id="@+id/loginProgress"
                android:indeterminateTint="@color/white"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="25dp"
                android:max="100"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnPhone" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>