<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/splash_screen_color"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivSplash"
        android:contentDescription="@string/splash_image_description"
        android:layout_height="350dp"
        android:layout_width="350dp"
        android:scaleType="centerCrop"
        android:src="@drawable/splash_screen"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="10dp" />

    <TextView
        android:id="@+id/tvSplashTitle"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:text="@string/splash_title"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toTopOf="@drawable/splash_screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivSplash" />

    <TextView
        android:id="@+id/tvSplashSubtitle"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:lineSpacingExtra="10dp"
        android:text="@string/splash_quote"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="italic"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSplashTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>